# Evo-Luminate

./: .gitignore  README.md  analyze_results.py  create_all_grids.py  create_grid.py  create_umap_grid.py  evolve_clocks.py  install-renderers.sh  justfile  main.py  plot_novelty.py  plot_umap_generations.py  post_process.py  pyproject.toml  pytest.ini  requirements.txt  run_experiments.py
eluminate/: analysis_utils.py  creative_strategies_manager.py  image_embedding.py  population.py  run_evolution_experiment.py  shaderToImage.py  text_embedding.py
eluminate/artifacts/: Artifact.py  GameIdeaArtifact.py  GeneticArtifact.py  ImageGen.py  SdfArtifact.py  ShaderArtifact.py  __init__.py  load_artifacts.py
eluminate/render-p5js/: package-lock.json  package.json
eluminate/render-sdf/: package-lock.json  package.json  run.js  sdf-renderer.js
eluminate/render-shaders/: package-lock.json  package.json  render-shaders.js
notebooks/: concepts.ipynb
scripts/: evolve_clocks.py  main_experiment.py  plot_results.py  run_experiments.py
scripts/setup/: install-renderers.sh
src/: IlluminationArchive.py  artifacts.py  create_umap.py  creative_strategies_manager.py  creativity_strategies.json  evolution4.py  gather_generations.py  image_embedding.py  main.py  main4.py  main5.py  main55.py  models.py  output_utils.py  plot_novelty.py  population.py  run_evolution_experiment.py  shaderToImage.py  text_embedding.py  utils.py
src/artifacts/: Ga.py  GameIdeaArtifact.py  GeneticArtifact.py  ImageGen.py  SdfArtifact.py  ShaderArtifact.py  __init__.py  load_artifacts.py  sdf_code.py
src/render-p5js/: render-p5.js
src/render-sdf/: package-lock.json  package.json
src/render-shaders/: package-lock.json  package.json  render-shaders.js
test/: make_image.py  test_evolution_smoke.py  test_get_embeddings.py  test_llm.py  test_sdf_render.py  test_select_novelty.py  test_shader_v2.glsl
testing/: conftest.py  make_image.py  test_aider.py  test_evolution_smoke.py  test_get_embeddings.py  test_llm.py  test_sdf_render.py  test_select_novelty.py  test_shader.glsl
testing/output/: test_embedding.npy
